--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "react-slideshow-image": "^4.3.0",
     "sort-by": "^0.0.2",
+    "sweetalert2": "^11.9.0",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
