--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
     "localforage": "^1.10.0",
@@ -21,6 +22,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
     "react-slideshow-image": "^4.3.0",
+    "react-table": "^7.8.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.9.0",
     "tailwindcss": "^3.3.5"
