--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.18.0",
     "react-slideshow-image": "^4.3.0",
     "react-table": "^7.8.0",
