--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.18.0",
     "react-slideshow-image": "^4.3.0",
     "react-table": "^7.8.0",
