--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "match-sorter": "^6.3.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
     "react-photo-view": "^1.2.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "react-slideshow-image": "^4.3.0",
     "react-table": "^7.8.0",
